weeks/week-03-service-mesh-envoy-gateways/02-traffic-management-internals/lab/envoy-priority.yaml
static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: route
            virtual_hosts:
            - name: vhost
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  weighted_clusters:
                    clusters:
                    - name: primary
                      weight: 100
                    - name: failover
                      weight: 0
          http_filters:
          - name: envoy.filters.http.router
            typed_config: { "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.HttpConnectionManager }
  clusters:
  - name: primary
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    health_checks:
    - timeout: 1s
      interval: 2s
      unhealthy_threshold: 1
      healthy_threshold: 1
      http_health_check: { path: "/" }
    load_assignment:
      cluster_name: primary
      endpoints:
      - priority: 0
        lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: host.docker.internal, port_value: 18081 }
  - name: failover
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: failover
      endpoints:
      - priority: 1
        lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: host.docker.internal, port_value: 18082 }
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
